--- a/package.json
+++ b/package.json
@@ -12,25 +12,41 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/common": "2.0.2",
-    "@angular/compiler": "2.0.2",
-    "@angular/core": "2.0.2",
-    "@angular/forms": "2.0.2",
-    "@angular/http": "2.0.2",
-    "@angular/platform-browser": "2.0.2",
-    "@angular/platform-browser-dynamic": "2.0.2",
+    "@angular/common": "2.1.0",
+    "@angular/compiler": "2.1.0",
+    "@angular/core": "2.1.0",
+    "@angular/forms": "2.1.0",
+    "@angular/http": "2.1.0",
+    "@angular/platform-browser": "2.1.0",
+    "@angular/platform-browser-dynamic": "2.1.0",
     "@angular/router": "3.0.0",
+    "@types/core-js": "^0.9.34",
     "@types/node": "^6.0.46",
+    "angular2-template-loader": "^0.6.0",
+    "angular2-universal": "^2.1.0-rc.1",
+    "angular2-universal-polyfills": "^2.1.0-rc.1",
+    "body-parser": "^1.15.2",
+    "core-js": "^2.4.1",
+    "express": "^4.14.0",
     "jquery": "^3.1.1",
+    "lodash": "^4.16.6",
+    "moment": "^2.15.2",
+    "preboot": "^4.5.2",
     "rxjs": "5.0.0-beta.12",
     "ts-helpers": "^1.1.1",
     "zone.js": "^0.6.23"
   },
   "devDependencies": {
+    "@types/body-parser": "0.0.33",
+    "@types/cookie-parser": "^1.3.30",
     "@types/core-js": "^0.9.34",
+    "@types/express": "^4.0.33",
     "@types/jasmine": "^2.2.30",
     "@types/jquery": "^2.0.33",
+    "@types/node": "^6.0.46",
     "angular-cli": "1.0.0-beta.16",
+    "angular2-template-loader": "^0.6.0",
+    "awesome-typescript-loader": "^2.2.4",
     "codelyzer": "~0.0.26",
     "jasmine-core": "2.4.1",
     "jasmine-spec-reporter": "2.5.0",
