--- a/package.json
+++ b/package.json
@@ -21,7 +21,10 @@
     "@angular/platform-browser-dynamic": "2.0.2",
     "@angular/router": "3.0.0",
     "@types/node": "^6.0.46",
+    "angular2-disqus": "^4.0.0",
+    "angular2-highlight-js": "^4.0.0",
     "jquery": "^3.1.1",
+    "moment": "^2.16.0",
     "rxjs": "5.0.0-beta.12",
     "ts-helpers": "^1.1.1",
     "zone.js": "^0.6.23"
