--- a/src/bower.json
+++ b/src/bower.json
@@ -15,5 +15,8 @@
     "bower_components",
     "test",
     "tests"
-  ]
+  ],
+  "dependencies": {
+    "font-awesome": "fontawesome#~4.7.0"
+  }
 }
