--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "angular-cli": {},
   "scripts": {
     "start": "ng serve",
-		"deploy": "./deploy.sh",
+    "deploy": "./deploy.sh",
     "lint": "tslint \"src/**/*.ts\"",
     "test": "ng test",
     "pree2e": "webdriver-manager update",
@@ -21,11 +21,14 @@
     "@angular/platform-browser": "2.0.2",
     "@angular/platform-browser-dynamic": "2.0.2",
     "@angular/router": "3.0.0",
+    "@types/express": "^4.0.34",
     "@types/node": "^6.0.46",
     "angular2-disqus": "^4.0.0",
     "angular2-highlight-js": "^4.0.0",
+    "body-parser": "^1.15.2",
     "jquery": "^3.1.1",
     "moment": "^2.16.0",
+    "nodemailer": "^2.6.4",
     "rxjs": "5.0.0-beta.12",
     "ts-helpers": "^1.1.1",
     "zone.js": "^0.6.23"
