--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@angular/core": "2.0.2",
     "@angular/forms": "2.0.2",
     "@angular/http": "2.0.2",
+    "@angular/material": "^2.0.0-alpha.10",
     "@angular/platform-browser": "2.0.2",
     "@angular/platform-browser-dynamic": "2.0.2",
     "@angular/router": "3.0.0",
@@ -28,6 +29,7 @@
     "body-parser": "^1.15.2",
     "jquery": "^3.1.1",
     "moment": "^2.16.0",
+    "ng2-meta": "^2.0.3",
     "nodemailer": "^2.6.4",
     "rxjs": "5.0.0-beta.12",
     "ts-helpers": "^1.1.1",
@@ -37,7 +39,7 @@
     "@types/core-js": "^0.9.34",
     "@types/jasmine": "^2.2.30",
     "@types/jquery": "^2.0.33",
-    "angular-cli": "1.0.0-beta.16",
+    "angular-cli": "^1.0.0-beta.21",
     "codelyzer": "~0.0.26",
     "jasmine-core": "2.4.1",
     "jasmine-spec-reporter": "2.5.0",
