--- a/package.json
+++ b/package.json
@@ -13,44 +13,49 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/common": "2.0.2",
-    "@angular/compiler": "2.0.2",
-    "@angular/core": "2.0.2",
-    "@angular/forms": "2.0.2",
-    "@angular/http": "2.0.2",
-    "@angular/material": "^2.0.0-alpha.10",
-    "@angular/platform-browser": "2.0.2",
-    "@angular/platform-browser-dynamic": "2.0.2",
+    "@angular/animations": "^4.0.0",
+    "@angular/cli": "^1.1.3",
+    "@angular/common": "^4.0.0",
+    "@angular/compiler": "^4.0.0",
+    "@angular/core": "^4.0.0",
+    "@angular/forms": "^4.0.0",
+    "@angular/http": "^4.0.0",
+    "@angular/material": "^2.0.0-beta.7",
+    "@angular/platform-browser": "^4.0.0",
+    "@angular/platform-browser-dynamic": "^4.0.0",
     "@angular/router": "3.0.0",
     "@types/express": "^4.0.34",
-    "@types/node": "^6.0.46",
-    "angular2-disqus": "^4.0.0",
-    "angular2-highlight-js": "^4.0.0",
-    "body-parser": "^1.15.2",
-    "jquery": "^3.1.1",
-    "moment": "^2.16.0",
-    "ng2-meta": "^2.0.3",
-    "nodemailer": "^2.6.4",
+    "@types/node": "6.0.46",
+    "angular2-disqus": "^6.0.0",
+    "angular2-highlight-js": "4.0.0",
+    "body-parser": "1.15.2",
+    "bootstrap": "^3.3.7",
+    "font-awesome": "^4.7.0",
+    "jquery": "3.1.1",
+    "moment": "2.16.0",
+    "ng2-meta": "2.0.3",
+    "nodemailer": "2.6.4",
     "rxjs": "5.0.0-beta.12",
-    "ts-helpers": "^1.1.1",
-    "zone.js": "^0.6.23"
+    "ts-helpers": "1.1.1",
+    "zone.js": "0.6.23"
   },
   "devDependencies": {
-    "@types/core-js": "^0.9.34",
-    "@types/jasmine": "^2.2.30",
-    "@types/jquery": "^2.0.33",
-    "angular-cli": "^1.0.0-beta.21",
-    "codelyzer": "~0.0.26",
+    "@angular/cli": "^1.1.3",
+    "@angular/compiler-cli": "^4.0.0",
+    "@types/core-js": "0.9.34",
+    "@types/jasmine": "2.2.30",
+    "@types/jquery": "2.0.33",
+    "codelyzer": "0.0.26",
     "jasmine-core": "2.4.1",
     "jasmine-spec-reporter": "2.5.0",
     "karma": "1.2.0",
-    "karma-chrome-launcher": "^2.0.0",
-    "karma-cli": "^1.0.1",
-    "karma-jasmine": "^1.0.2",
-    "karma-remap-istanbul": "^0.2.1",
+    "karma-chrome-launcher": "2.0.0",
+    "karma-cli": "1.0.1",
+    "karma-jasmine": "1.0.2",
+    "karma-remap-istanbul": "0.2.1",
     "protractor": "4.0.9",
     "ts-node": "1.2.1",
     "tslint": "3.13.0",
-    "typescript": "2.0.2"
+    "typescript": "2.3.3"
   }
 }
