--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "nodemailer": "2.6.4",
     "rxjs": "5.0.0-beta.12",
     "ts-helpers": "1.1.1",
+    "web-animations-js": "^2.2.5",
     "zone.js": "0.6.23"
   },
   "devDependencies": {
